# Mashiro.py

./: .gitignore  Procfile.file  README.md  config.json  config.json.example  index.py  keep_alive.py  pyproject.toml  requirements.txt
cogs/: info.py  nsfw.py
